--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "postinstall": "bower install",
-    "start": "http-server"
+    "postinstall": "bower install && gulp js",
+    "start": "http-server -p 8080",
+    "start-with-mocks": "http-server -p 8080 & json-server api/mocks.json --port 8081"
   },
   "devDependencies": {
     "bower": "^1.3.12",
