--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ notifications:
   - viktor@farcic.com
 
 before_install:
-    npm install -g grunt-cli
-    npm install -g gulp
-    npm install -g bower
-    npm install -g http-server
-    npm install -g json-server
+ - npm install -g grunt-cli
+ - npm install -g gulp
+ - npm install -g bower
+ - npm install -g http-server
+ - npm install -g json-server
 
 script:
     gulp test
