--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "http-server -p 8080",
     "start-with-mocks": "http-server -p 8080 & json-server api/mocks.json --port 8081"
   },
-  "devDependencies": {
+  "dependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
