--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "postinstall": "bower install && gulp js",
     "start": "node web.js",
-    "start-with-mocks": "http-server -p 8080 & json-server api/mocks.json --port 8081"
+    "start-with-mocks": "node web.js & json-server api/mocks.json --port 8081"
   },
   "dependencies": {
     "bower": "^1.3.12",
