--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "jshint-stylish": "^1.0.0",
     "json-server": "^0.4.1",
     "express": "^4.9.6"
+  },
+  "devDependencies": {
+    "gulp-html-replace": "^1.4.4",
+    "gulp-util": "^3.0.4"
   }
 }
