Removed bower from package.json

--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "postinstall": "bower install --allow-root | xargs echo && gulp js",
-    "start": "node web.js",
-    "start-with-mocks": "node web.js & json-server api/mocks.json --port 8081"
+    "start": "node web.js"
   },
   "dependencies": {
     "bower": "^1.3.12",
